Using drawer and stack navigation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,8 +39,8 @@
         "error",
         "ignorePackages",
         {
-          "ts": "never",
-          "tsx": "never"
+          "js": "never",
+          "jsx": "never"
         }
       ]
     }
